# voxel-gen

./: CMakeLists.txt  README.md
shaders/: simp_shader.frag  simp_shader.vert
src/: CMakePresets.json  main.cpp  vvox_app.cpp  vvox_app.hpp  vvox_device.cpp  vvox_device.hpp  vvox_game_object.hpp  vvox_model.cpp  vvox_model.hpp  vvox_pipeline.cpp  vvox_pipeline.hpp  vvox_swap_chain.cpp  vvox_swap_chain.hpp  vvox_window.cpp  vvox_window.hpp
